Let's get this party started.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "blackburn"]
 	path = blackburn
 	url = https://github.com/yoshiharuyamashita/blackburn.git
+[submodule "themes/blackburn"]
+	path = blog/themes/blackburn
+	url = https://github.com/yoshiharuyamashita/blackburn.git
